# waveshare-watch-rs-AMOLED-1.8

./: Cargo.toml  README.md
.cargo/: config.toml
src/: board.rs  main.rs  main.rs1  works.rs
src/apps/: flappy.rs  game2048.rs  maze.rs  mod.rs  mp3player.rs  recorder.rs  settings.rs  smarthome.rs  snake.rs  tetris.rs
src/drivers/: co5300.rs  framebuffer.rs  mod.rs  qspi_bus.rs
src/peripherals/: audio.rs  ble.rs  cpu_clock.rs  http.rs  imu.rs  io_expander.rs  mod.rs  power.rs  power_stats.rs  rtc.rs  sdcard.rs  touch.rs  wifi.rs
src/ui/: launcher.rs  mod.rs  pages.rs  power_page.rs  segments.rs  t9_keyboard.rs  watchface.rs
